--- a/views/notFound.html
+++ b/views/notFound.html
@@ -15,6 +15,6 @@
         <img src="../assets/404-not-found.png" class="img-fluid" alt="empty_task">
         <h1 class="responsive-title">Page not found</h1>
     </div>
-    <a href="#!/" class="btn btn-primary action-buttons-layout">Go back</a>
+    <button ng-click="goBackToPreviousRoute()" class="btn btn-primary action-buttons-layout">Go back</button>
 </div>
 <!-- end main container -->
