--- a/views/createNote.html
+++ b/views/createNote.html
@@ -26,7 +26,7 @@
     <!-- end toast alert -->
 
     <!-- create note form -->
-    <form ng-submit="createNote()" class="create-note-form w-75 p-5">
+    <form ng-submit="createNote()" class="create-note-form p-5">
         <h2 class="text-center create-note-title">Create new note</h2>
         <div class="form-group">
             <label for="title">Title</label>
@@ -47,7 +47,7 @@
                 <option value="Yellow">Yellow</option>
             </select>
         </div>
-        <div class="d-flex justify-content-sm-center justify-content-md-end">
+        <div class="d-flex justify-content-center justify-content-md-end">
             <button class="btn btn-primary ml-1" type="submit">Save</button>
             <button ng-click="cancel()" class="btn btn-danger ml-1">Cancel</button>
         </div>
