--- a/views/createTask.html
+++ b/views/createTask.html
@@ -26,7 +26,7 @@
     <!-- end toast alert -->
 
     <!-- create task form -->
-    <form ng-submit="createTask()" class="create-task-form w-75 p-5">
+    <form ng-submit="createTask()" class="create-task-form p-5">
         <h2 class="text-center create-task-title">Create new task</h2>
         <div class="form-group">
             <label for="title">Title</label>
@@ -51,7 +51,7 @@
                 <option value="Yellow">Yellow</option>
             </select>
         </div>
-        <div class="d-flex justify-content-sm-center justify-content-md-end">
+        <div class="d-flex justify-content-center justify-content-md-end">
             <button class="btn btn-primary ml-1" type="submit">Save</button>
             <button ng-click="cancel()" class="btn btn-danger ml-1">Cancel</button>
         </div>
