--- a/index.css
+++ b/index.css
@@ -95,6 +95,7 @@ textarea[id="description"], textarea[id="description"]:focus,
 input[id="deadline"], input[id="deadline"]:focus,
 input[id="status"], input[id="status"]:focus,
 select[id="color"], select[id="color"]:focus,
+select[id="status"], select[id="status"]:focus,
 textarea[id="content"], textarea[id="content"]:focus {
     border-radius: 10px;
     border: 3px solid black;
