--- a/views/task.html
+++ b/views/task.html
@@ -74,7 +74,7 @@
         <!-- tasks card -->
         <div ng-repeat="task in tasks | startFrom: (currentPage - 1) * pageSize | limitTo: pageSize" class="col-xl-3 col-lg-4 col-md-6 col-sm-12 col-xs-12">
             <div ng-class="task.attributes.color" class="card-layout my-4 mx-2 p-4">
-                <span ng-show="task.attributes.status == 'Overdue'" class="badge badge-danger align-self-end action-buttons-layout p-2">Overdue</span>
+                <span ng-show="task.attributes.status == 'overdue'" class="badge badge-danger align-self-end action-buttons-layout p-2">Overdue</span>
                 <h5>{{ task.attributes.title }}</h5>
                 <p>{{ task.attributes.description }}</p>
                 <p>Deadline: <time>{{ task.attributes.deadline }}</time></p>
@@ -89,10 +89,10 @@
                     <a ng-hide="isAdmin == 'true' || isAdmin == true" href="#!/task/delete/{{ task.id }}" class="btn btn-danger action-buttons-layout" title="Delete" data-toggle="modal" data-target="#deleteModal">
                         <i class="bx bx-trash"></i>
                     </a>
-                    <button ng-click="archiveTask(task.id)" ng-show="{{ task.attributes.is_active == true && (isAdmin == 'false' || isAdmin == false) }}" ng-disabled="task.attributes.status == 'Overdue'" class="btn btn-warning action-buttons-layout" title="Archive">
+                    <button ng-click="archiveTask(task.id)" ng-show="{{ task.attributes.is_active == true && (isAdmin == 'false' || isAdmin == false) }}" ng-disabled="task.attributes.status == 'overdue'" class="btn btn-warning action-buttons-layout" title="Archive">
                         <i class="bx bx-archive-in"></i>
                     </button>
-                    <button ng-click="activateTask(task.id)" ng-show="{{ task.attributes.is_active == false && (isAdmin == 'false' || isAdmin == false) }}" ng-disabled="task.attributes.status == 'Overdue'" class="btn btn-info action-buttons-layout" title="Activate">
+                    <button ng-click="activateTask(task.id)" ng-show="{{ task.attributes.is_active == false && (isAdmin == 'false' || isAdmin == false) }}" ng-disabled="task.attributes.status == 'overdue'" class="btn btn-info action-buttons-layout" title="Activate">
                         <i class="bx bx-archive-out"></i>
                     </button>
                 </div>
