--- a/index.css
+++ b/index.css
@@ -543,7 +543,8 @@ input[type="submit"]:hover{
 .landing-page-backdrop {
     height: 100vh;
     width: 100%;
-    background: radial-gradient(circle, transparent 25%, #ffffff  26%),linear-gradient(45deg, transparent 46%, #000000 47%, #000000 52%, transparent 53%), linear-gradient(135deg, transparent 46%, #000000 47%, #000000 52%, transparent 53%);
+    background: radial-gradient(circle, transparent 25%, #ffffff  26%),linear-gradient(45deg, transparent 46%, #000000 47%, #000000 52%, transparent 53%), 
+    linear-gradient(135deg, transparent 46%, #000000 47%, #000000 52%, transparent 53%);
     background-size: 1em 1em;
     background-color: #ffffff;
     opacity: 0.85;
